--- a/src/KNN.ipynb
+++ b/src/KNN.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_37088/3791647812.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/3791647812.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -297,24 +297,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 테스트 데이터 분리"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "# Split the data into train and test sets\n",
-    "# train_x, test_x = train_test_split(scaled_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# KNN 학습\n",
     "\n",
     " 최종적으로는 knn결과(distances, indices를 csv형식으로 저장하여 학습 절차를 skip한다)\n",
@@ -324,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "import joblib\n",
     "\n",
-    "knn = NearestNeighbors(n_neighbors=5, algorithm='brute', metric='cosine')\n",
+    "knn = NearestNeighbors(n_neighbors=10, algorithm='brute', metric='cosine')\n",
     "knn.fit(scaled_data)\n",
     "\n",
     "distances, indices = knn.kneighbors(scaled_data, n_neighbors=3)"
@@ -339,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +338,7 @@
        "['./models/knn_indices.pkl']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +506,7 @@
        "4  552520       67     12  1601942400               1  301.5   5432359"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,39 +519,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 테스트 데이터 분리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/1483927302.py:3: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  user_game_count = pd.DataFrame(data.groupby('user_id')['user_id', 'app_id'].count())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(41908, 7)\n",
+      "(4457, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "user_game_count = pd.DataFrame(data.groupby('user_id')['user_id', 'app_id'].count())\n",
+    "# print(user_game_count[user_game_count['user_id'] > 10].shape)\n",
+    "\n",
+    "over_10_users = user_game_count[user_game_count['app_id'] > 10]['user_id']\n",
+    "under_10_users = user_game_count[user_game_count['app_id'] <= 10]['user_id']\n",
+    "\n",
+    "train_X = []\n",
+    "test_X = []\n",
+    "\n",
+    "for user in recommend_datas['user_id'].unique():\n",
+    "    X = recommend_datas[recommend_datas['user_id'] == user]\n",
+    "    \n",
+    "    if len(X) <= 10:\n",
+    "        train_X.append(X)\n",
+    "        continue\n",
+    "    \n",
+    "    # t_size = 5 / len(X) \n",
+    "    # train, test = train_test_split(X,train_size= 1- t_size ,test_size=t_size)\n",
+    "    train, test = train_test_split(X,test_size=0.2)\n",
+    "    train_X.append(train)\n",
+    "    test_X.append(test)\n",
+    "\n",
+    "train_X = pd.concat(train_X)\n",
+    "test_X = pd.concat(test_X)\n",
+    "    \n",
+    "print(train_X.shape)\n",
+    "print(test_X.shape)\n",
+    "\n",
+    "\n",
+    "# Split the data into train and test sets\n",
+    "# train_x, test_x = train_test_split(scaled_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   user_id  app_id                            title      distance\n",
-      "9  7606333  306130        The Elder Scrolls® Online  6.147283e-08\n",
-      "6  7606333  381210                 Dead by Daylight  1.972394e-07\n",
-      "2  7606333  413150                   Stardew Valley  3.325829e-07\n",
-      "7  7606333  284160                     BeamNG.drive  3.946931e-07\n",
-      "3  7606333  359550  Tom Clancy's Rainbow Six® Siege  6.395513e-07\n",
-      "   user_id  app_id                            title      distance\n",
-      "9  7606333  306130        The Elder Scrolls® Online  6.147283e-08\n",
-      "6  7606333  381210                 Dead by Daylight  1.972394e-07\n",
-      "2  7606333  413150                   Stardew Valley  3.325829e-07\n",
-      "7  7606333  284160                     BeamNG.drive  3.946931e-07\n",
-      "3  7606333  359550  Tom Clancy's Rainbow Six® Siege  6.395513e-07\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "KNN_recommend_result = pd.DataFrame(columns=['user_id', 'app_id', 'title', 'distance'])\n",
+    "\n",
     "# for user in recommend_datas['user_id'].unique():\n",
-    "for user in [7606333]:\n",
+    "def recommend(user):\n",
+    "    KNN_recommend_result = pd.DataFrame(columns=['user_id', 'app_id', 'title', 'distance'])\n",
     "    # 10번 유저 게임 추천\n",
-    "    rec_list = recommend_datas.loc[(recommend_datas['user_id'] == user) & (recommend_datas['is_recommended'] == 1)]\n",
+    "    rec_list = train_X.loc[(train_X['user_id'] == user) & (train_X['is_recommended'] == 1)]\n",
     "\n",
     "    # 10번 유저의 추천 게임과 유사한 K개 게임 추출\n",
     "    merged_idices = pd.merge(rec_list, loaded_indices, on='app_id')[[1, 2]]\n",
@@ -581,9 +622,9 @@
     "    recommend_result = pd.merge(id_title, pd.DataFrame({'distance': merged_distances, 'app_id': merged_idices}), on=\"app_id\", how=\"inner\")\n",
     "    recommend_result = pd.concat([pd.DataFrame({'user_id' : [user] * recommend_result.shape[0]}), recommend_result], axis =1).sort_values(by='distance', ascending=True).iloc[:5]\n",
     "    \n",
-    "    if recommend_datas.size != 0:\n",
+    "    if train_X.size != 0:\n",
     "        KNN_recommend_result = pd.concat([KNN_recommend_result, recommend_result])\n",
-    "    print(KNN_recommend_result)\n",
+    "    return recommend_result\n",
     "    \n",
     "# joblib.dump(KNN_recommend_result, './models/knn_recommend_result.pkl')"
    ]
@@ -598,6 +639,78 @@
     "- 나머지는 학습에 사용\n",
     "- 제외된 유저에서 n%의 데이터로 추천을 받는다.\n",
     "- 추천받은 데이터와 실제 데이터간 자카드 유사도 공식 계산\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([    1183,     2765,     4446,    15089,    16448,    48843,\n",
+      "               51559,    73191,    73274,    83283,\n",
+      "            ...\n",
+      "            13703989, 13708103, 13714056, 13715092, 13718408, 13720291,\n",
+      "            13735884, 13737779, 13755432, 13781520],\n",
+      "           dtype='int64', name='user_id', length=1417)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 10개 이상 유저, 아닌 유저 분할\n",
+    "user_game_count = pd.DataFrame(data.groupby('user_id')['app_id'].count())\n",
+    "# print(user_game_count[user_game_count['user_id'] > 10].shape)\n",
+    "\n",
+    "over_10_users = user_game_count[user_game_count['app_id'] > 10].index\n",
+    "under_10_users = user_game_count[user_game_count['app_id'] <= 10].index\n",
+    "print(over_10_users)\n",
+    "# under_10_users = user_game_count[user_game_count['app_id'] <= 10]['user_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_precision: 0.04652482269503569\n",
+      "average_recall: 0.07862377575143516\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "\n",
+    "\n",
+    "all_precisions = []\n",
+    "all_recalls = []\n",
+    "\n",
+    "for user in over_10_users:\n",
+    "    user_test_X = test_X[test_X['user_id'] == user]\n",
+    "    actual_Y = user_test_X[user_test_X['is_recommended'] == 1]\n",
+    "    \n",
+    "    predict_Y = recommend(user)\n",
+    "    \n",
+    "    if not actual_Y.empty and not predict_Y.empty:\n",
+    "        hit = len(set(actual_Y['app_id']) & set(predict_Y['app_id']))\n",
+    "        precision = hit / len(predict_Y['app_id'])\n",
+    "        recall = hit / len(actual_Y['app_id'])\n",
+    "        all_precisions.append(precision)\n",
+    "        all_recalls.append(recall)\n",
+    "            \n",
+    "\n",
+    "average_precision = sum(all_precisions) / len(all_precisions)\n",
+    "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "\n",
+    "print(\"average_precision:\" , average_precision)\n",
+    "print(\"average_recall:\", average_recall)"
    ]
   }
  ],
